
- default_charset if not specified is now UTF-8 instead of ISO-8859-1. (Rasmus)

- Changed the structure of op_array.opcodes. The constant values are moved from
  opcode operands into a separate literal table. (Dmitry)
- Changed session.entropy_file to default to /dev/urandom or /dev/arandom if
  either is present at compile time. (Rasmus)

- Improved CLI Interactive readline shell (Johannes)
  . Added cli.pager ini setting to set a pager for output.
  . Added cli.prompt ini settingto configure the shell prompt.
  . Added shortcut #inisetting=value to change ini settings at run-time.
  . Don't terminate shell on fatal errors.
- Improved ext/zlib: re-implemented non-file related functionality. (Mike)
- Improved output layer. See README.NEW-OUTPUT-API for internals. (Mike)

- Removed legacy features:
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables ini option and its associated function. (Kalle)
  . highlight.bg ini option. (Kalle)
  . import_request_variables(). (Kalle)
  . register_globals. (Kalle)
  . register_long_arrays ini option. (Kalle)
  . Safe mode. (Kalle)
  . Session bug compatibility mode (session.bug_compat42 and 
    session.bug_compat_warn ini options). (Kalle)
  . session_is_registered(), session_register() and session_unregister() 
    functions. (Kalle)
  . y2k_compliance ini option. (Kalle)

- Removed support for linking against MySQL client libraries older 4.1 from
  PDO_mysql. (Johannes)

- Deprecated mysql_list_dbs() (Request #50667). (Andrey)

- Implemented FR #52555 (Ability to get HTTP response code). (Paul Dragoonis)
- Implemented FR #51295 (SQLite3::busyTimeout not existing). (Mark)
- Implemented FR #48632 (OpenSSL AES support). (yonas dot y
   at gmail dot com, Pierre)
- Implemented FR #42060 (Add paged Results support). (ando@OpenLDAP.org,
  iarenuno@eteo.mondragon.edu, jeanseb@au-fil-du.net, remy.saissy@gmail.com)

- Fixed PDO objects binary incompatibility. (Dmitry)
